force-app/main/default/objects/Contact/fields/abm_contactGrade__c.field-meta.xml
<CustomField>
    <fullName>abm_contactGrade__c</fullName>
    <label>abm_contactGrade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>