force-app/main/default/objects/Contact/fields/abm_engagmentScore__c.field-meta.xml
<CustomField>
    <fullName>abm_engagmentScore__c</fullName>
    <label>abm_engagmentScore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>