force-app/main/default/objects/Contact/fields/abm_intentscore__c.field-meta.xml
<CustomField>
    <fullName>abm_intentscore__c</fullName>
    <label>abm_intentscore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>