force-app/main/default/objects/Contact/fields/abm_profileFitAcct__c.field-meta.xml
<CustomField>
    <fullName>abm_profileFitAcct__c</fullName>
    <label>abm_profileFitAcct</label>
    <length>255</length>
    <type>Text</type>
</CustomField>