force-app/main/default/objects/Contact/fields/Account_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Address__c</fullName>
    <formula>Account.Name &amp; BR() &amp; Account.BillingStreet  &amp;BR()&amp; Account.BillingCity &amp;&apos;, &apos;&amp; Account.BillingState &amp;&apos; &apos;&amp; Account.BillingPostalCode &amp;BR() &amp;  Account.BillingCountry&amp;br()&amp;  Account.Phone</formula>
    <inlineHelpText>This is the linked Address. If you need to update the billing address, you can do on the contact page, through the non linked Account Billing Address Field</inlineHelpText>
    <label>Account Billing Address (Linked)</label>
    <type>Text</type>
</CustomField>