force-app/main/default/objects/Contact/fields/Account_Billing_State_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_State_Text__c</fullName>
    <description>Text view. allows the state name to be displayed on VF pages.</description>
    <formula>Account.BillingState</formula>
    <label>Account Billing State Text</label>
    <type>Text</type>
</CustomField>