force-app/main/default/objects/Contact/fields/Account_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Account_Ranking__c</fullName>
    <formula>Account.Rank__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Ranking</label>
    <type>Text</type>
</CustomField>