force-app/main/default/objects/Contact/fields/ACCOUNTNAME__c.field-meta.xml
<CustomField>
    <fullName>ACCOUNTNAME__c</fullName>
    <description>for Conga</description>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACCOUNTNAME</label>
    <type>Text</type>
</CustomField>