force-app/main/default/objects/Contact/fields/Accounts_Handled_by_Rep__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Handled_by_Rep__c</fullName>
    <inlineHelpText>Any Notes or accounts that rep handles. E.g. Top SPG, National Account, or a vertical</inlineHelpText>
    <label>Accounts Handled by Rep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>