force-app/main/default/objects/Contact/fields/AccountTypeCorrect__c.field-meta.xml
<CustomField>
    <fullName>AccountTypeCorrect__c</fullName>
    <formula>text( Account.Type )</formula>
    <label>Account Channel Type</label>
    <type>Text</type>
</CustomField>