force-app/main/default/objects/Contact/fields/Active_User__c.field-meta.xml
<CustomField>
    <fullName>Active_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For viewsonic employees and community users</description>
    <label>InActive User</label>
    <type>Checkbox</type>
</CustomField>