force-app/main/default/objects/Contact/fields/Active_User_Formula__c.field-meta.xml
<CustomField>
    <fullName>Active_User_Formula__c</fullName>
    <formula>UserID__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active User</label>
    <type>Checkbox</type>
</CustomField>