force-app/main/default/objects/Contact/fields/admin_field__c.field-meta.xml
<CustomField>
    <fullName>admin_field__c</fullName>
    <label>admin field</label>
    <length>10</length>
    <type>Text</type>
</CustomField>