force-app/main/default/objects/Contact/fields/Annual_Sales__c.field-meta.xml
<CustomField>
    <fullName>Annual_Sales__c</fullName>
    <description>This is the annual sales number (in dollars, if known) for the account.</description>
    <label>Annual Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>