force-app/main/default/objects/Contact/fields/Any_Help_Needed_Offered__c.field-meta.xml
<CustomField>
    <fullName>Any_Help_Needed_Offered__c</fullName>
    <label>Any Help Needed/Offered</label>
    <length>200</length>
    <type>Text</type>
</CustomField>