force-app/main/default/objects/Contact/fields/Area_of_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Responsibility__c</fullName>
    <label>Area of Responsibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Beverage Management</fullName>
            </value>
            <value>
                <fullName>Corp. Management</fullName>
            </value>
            <value>
                <fullName>Culinary Chef</fullName>
            </value>
            <value>
                <fullName>Design / Construction</fullName>
            </value>
            <value>
                <fullName>Development/Real Est</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>FOH Management</fullName>
            </value>
            <value>
                <fullName>Franchisor/Franchisee</fullName>
            </value>
            <value>
                <fullName>General Manager</fullName>
            </value>
            <value>
                <fullName>Independent</fullName>
            </value>
            <value>
                <fullName>International Operations</fullName>
            </value>
            <value>
                <fullName>MIS/IT</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Purchasing</fullName>
            </value>
            <value>
                <fullName>Sales / Marketing</fullName>
            </value>
            <value>
                <fullName>Manager &amp; Team of National Accounts</fullName>
            </value>
            <value>
                <fullName>Manager &amp; Team of Consumer Accounts</fullName>
            </value>
            <value>
                <fullName>Manager(s) of SPG Accounts</fullName>
            </value>
            <value>
                <fullName>Manager &amp; Team of Vertical Segments</fullName>
            </value>
            <value>
                <fullName>Reps/Teams of Top 25 ViewSonic Accounts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>