force-app/main/default/objects/Contact/fields/Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Billing_State__c</fullName>
    <formula>Account.BillingState</formula>
    <label>Billing State</label>
    <type>Text</type>
</CustomField>