force-app/main/default/objects/Contact/fields/Billing_Zip__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip__c</fullName>
    <formula>Account.BillingPostalCode</formula>
    <label>Billing Zip</label>
    <type>Text</type>
</CustomField>