force-app/main/default/objects/Contact/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <description>VS Reps category of flow. Need to be on contact level so that all people can see report category. This is part of a flow.</description>
    <label>Business</label>
    <length>200</length>
    <type>Text</type>
</CustomField>