force-app/main/default/objects/Contact/fields/Call_Duration__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration__c</fullName>
    <label>Call Duration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>