force-app/main/default/objects/Contact/fields/Citrix_Partner_Level__c.field-meta.xml
<CustomField>
    <fullName>Citrix_Partner_Level__c</fullName>
    <label>Citrix Partner Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Citrix Platinum</fullName>
            </value>
            <value>
                <fullName>Citrix Gold</fullName>
            </value>
            <value>
                <fullName>Citrix Silver</fullName>
            </value>
            <value>
                <fullName>Citrix Authorized</fullName>
            </value>
            <value>
                <fullName>Citrix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>