force-app/main/default/objects/Contact/fields/Citrix_Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Citrix_Program_Type__c</fullName>
    <label>Citrix Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Citrix Solution Advisor</fullName>
            </value>
            <value>
                <fullName>Citrix System Integrator</fullName>
            </value>
            <value>
                <fullName>Not Designated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>