force-app/main/default/objects/Contact/fields/City_State__c.field-meta.xml
<CustomField>
    <fullName>City_State__c</fullName>
    <formula>MailingCity&amp;&apos; &apos;&amp;text(MailingStateCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City &amp; State</label>
    <type>Text</type>
</CustomField>