force-app/main/default/objects/Contact/fields/cobrandingTemplateId__c.field-meta.xml
<CustomField>
    <fullName>cobrandingTemplateId__c</fullName>
    <label>deprecate cobrandingTemplateId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>