force-app/main/default/objects/Contact/fields/Commercial_Displays__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Displays__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commercial Displays</label>
    <type>Checkbox</type>
</CustomField>