force-app/main/default/objects/Contact/fields/Company_Name_Portal__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_Portal__c</fullName>
    <label>Company Name (Portal)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>