force-app/main/default/objects/Contact/fields/congaAutoSend__c.field-meta.xml
<CustomField>
    <fullName>congaAutoSend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>congaAutoSend</label>
    <type>Checkbox</type>
</CustomField>