force-app/main/default/objects/Contact/fields/congaCobrandFormula__c.field-meta.xml
<CustomField>
    <fullName>congaCobrandFormula__c</fullName>
    <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;emailtemplateid=a0n1H00000EZfXM&quot; +
&quot;&amp;QueryID=[Brand]a0o1H00000F18NU&quot; +
&quot;&amp;qmode=SendEmail&quot; +
&quot;&amp;EmailReplyToID=&quot;+OwnerId +
&quot;&amp;templateid=&quot; + cobrandingTemplateId__c  +
&quot;&amp;defaultpdf=1&quot; +
&quot;&amp;emailtoid=&quot; + Email +
&quot;&amp;EmailBCC=jason.orbison@viewsonic.com&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>congaCobrandFormula</label>
    <type>Text</type>
</CustomField>