force-app/main/default/objects/Contact/fields/conidtemp__c.field-meta.xml
<CustomField>
    <fullName>conidtemp__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>conidtemp</label>
    <type>Text</type>
</CustomField>