force-app/main/default/objects/Contact/fields/Created_by_Sales__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Sales__c</fullName>
    <formula>if( CreatedBy.Profile.Name  =&quot;Sales - Canada&quot;,true,
if( CreatedBy.Profile.Name  =&quot;Sales - Distributor&quot;,true,
if( CreatedBy.Profile.Name  =&quot;Sales - Latin America&quot;,true,
if( CreatedBy.Profile.Name  =&quot;Sales - RBM&quot;,true,
if( CreatedBy.Profile.Name  =&quot;Sales - Reseller&quot;,true,
if( CreatedBy.Profile.Name  =&quot;Sales - TM&quot;,true,
if( CreatedBy.Profile.Name  =&quot;Sales ISR&quot;,true,
false)))))))</formula>
    <label>Created by Sales</label>
    <type>Checkbox</type>
</CustomField>