force-app/main/default/objects/Contact/fields/Created_Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Created_Month_Year__c</fullName>
    <formula>if(   TEXT(Month(DATEVALUE(CreatedDate))) == &apos;10&apos; || 
TEXT(Month(DATEVALUE(CreatedDate))) == &apos;11&apos; ||
TEXT(Month(DATEVALUE(CreatedDate))) == &apos;12&apos;,
 TEXT(Month(DATEVALUE(CreatedDate)))
+&apos; &apos; + TEXT(Year(DATEVALUE(CreatedDate))),

&apos;0&apos;+TEXT(Month(DATEVALUE(CreatedDate)))
+&apos; &apos; + TEXT(Year(DATEVALUE(CreatedDate))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Month Year</label>
    <type>Text</type>
</CustomField>