force-app/main/default/objects/Contact/fields/CreatedInPortal__c.field-meta.xml
<CustomField>
    <fullName>CreatedInPortal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CreatedInPortal</label>
    <type>Checkbox</type>
</CustomField>