force-app/main/default/objects/Contact/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <description>Custom field to allow imported data to be tagged with a data source</description>
    <label>Data Source</label>
    <length>40</length>
    <type>Text</type>
</CustomField>