force-app/main/default/objects/Contact/fields/Days_Since_Last_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Opportunity__c</fullName>
    <formula>now() -  Recent_Opporunity_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>