force-app/main/default/objects/Contact/fields/Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker__c</fullName>
    <label>Decision Maker</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>