force-app/main/default/objects/Contact/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>gets domain from email address. allows contact email domain to be the map for leads and auto align the lead company name and lead company account type, leading to smoother conversion.</description>
    <formula>MID(Email, FIND(&apos;@&apos;, Email)+1, len(Email))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domain</label>
    <type>Text</type>
</CustomField>