force-app/main/default/objects/Contact/fields/Email_Sales_Rep_Eval__c.field-meta.xml
<CustomField>
    <fullName>Email_Sales_Rep_Eval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Sales Rep Eval</label>
    <type>Checkbox</type>
</CustomField>