force-app/main/default/objects/Contact/fields/End_User_Text__c.field-meta.xml
<CustomField>
    <fullName>End_User_Text__c</fullName>
    <label>End User Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>