force-app/main/default/objects/Contact/fields/Eval_Bill_Contact_Total_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Eval_Bill_Contact_Total_Outstanding__c</fullName>
    <label>Eval Bill Contact Total Outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>