force-app/main/default/objects/Contact/fields/Evals_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Evals_Past_Due__c</fullName>
    <label>Evals Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>