force-app/main/default/objects/Contact/fields/Ext__c.field-meta.xml
<CustomField>
    <fullName>Ext__c</fullName>
    <description>Custom field used for Everything Channel project</description>
    <inlineHelpText>Phone Ext.</inlineHelpText>
    <label>Ext.</label>
    <length>8</length>
    <type>Text</type>
</CustomField>