force-app/main/default/objects/Contact/fields/FCCONTACTTID__c.field-meta.xml
<CustomField>
    <fullName>FCCONTACTTID__c</fullName>
    <label>FCCONTACTTID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>