force-app/main/default/objects/Contact/fields/FDCONTACTID__c.field-meta.xml
<CustomField>
    <fullName>FDCONTACTID__c</fullName>
    <label>FDCONTACTID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>