force-app/main/default/objects/Contact/fields/Finch_Club_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Finch_Club_ID_Number__c</fullName>
    <description>This is the ID number of for this contact</description>
    <label>Finch Club ID Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>