force-app/main/default/objects/Contact/fields/Finch_Club_Status__c.field-meta.xml
<CustomField>
    <fullName>Finch_Club_Status__c</fullName>
    <label>Finch Club Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active - Enrolled</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>