force-app/main/default/objects/Contact/fields/finchClubDate__c.field-meta.xml
<CustomField>
    <fullName>finchClubDate__c</fullName>
    <description>Date Finch Club Approved</description>
    <label>finchClubDate</label>
    <type>Date</type>
</CustomField>