force-app/main/default/objects/Contact/fields/finchClubLegacyId__c.field-meta.xml
<CustomField>
    <fullName>finchClubLegacyId__c</fullName>
    <externalId>true</externalId>
    <label>finchClubLegacyId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>