force-app/main/default/objects/Contact/fields/FinchOracleId__c.field-meta.xml
<CustomField>
    <fullName>FinchOracleId__c</fullName>
    <label>FinchOracleId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>