force-app/main/default/objects/Contact/fields/Flow_Opp_2_Product_Request__c.field-meta.xml
<CustomField>
    <fullName>Flow_Opp_2_Product_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Temporary Field that updates Product Request with the opportunity name</inlineHelpText>
    <label>Flow Opp 2 Product Request</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>