force-app/main/default/objects/Contact/fields/Follow_Up_Email__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Email__c</fullName>
    <label>Follow Up Email</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>