force-app/main/default/objects/Contact/fields/freshdesk__Freshdesk_External_Id__c.field-meta.xml
<CustomField>
    <fullName>freshdesk__Freshdesk_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Freshdesk External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>