force-app/main/default/objects/Contact/fields/freshdesk__Freshdesk_Twitter_UserName__c.field-meta.xml
<CustomField>
    <fullName>freshdesk__Freshdesk_Twitter_UserName__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Freshdesk Twitter Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>