force-app/main/default/objects/Contact/fields/Functional_Department__c.field-meta.xml
<CustomField>
    <fullName>Functional_Department__c</fullName>
    <description>Used to segment Contacts according to work area.</description>
    <inlineHelpText>Please choose the functional department where this Contact works.  Contact your system administrator if you feel that a new category needs to be added.</inlineHelpText>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Purchasing</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>