force-app/main/default/objects/Contact/fields/GetUserId__c.field-meta.xml
<CustomField>
    <fullName>GetUserId__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GetUserId</label>
    <type>Checkbox</type>
</CustomField>