force-app/main/default/objects/Contact/fields/globalAccountId__c.field-meta.xml
<CustomField>
    <fullName>globalAccountId__c</fullName>
    <description>Account id from external systems for global rollout import</description>
    <externalId>true</externalId>
    <label>globalAccountId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>