force-app/main/default/objects/Contact/fields/globalContactId__c.field-meta.xml
<CustomField>
    <fullName>globalContactId__c</fullName>
    <description>external id for global rollout importing of data external id</description>
    <externalId>true</externalId>
    <label>globalContactId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>