force-app/main/default/objects/Contact/fields/GovSpend_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>GovSpend_Account_Type__c</fullName>
    <label>GovSpend Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>