force-app/main/default/objects/Contact/fields/GovSpend_ID__c.field-meta.xml
<CustomField>
    <fullName>GovSpend_ID__c</fullName>
    <externalId>true</externalId>
    <label>GovSpend ID</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>