force-app/main/default/objects/Contact/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>Industry from FinchClub. it is primary industry</description>
    <label>Primary Industry Selling Into</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Industries</fullName>
            </value>
            <value>
                <fullName>Education-K-12</fullName>
            </value>
            <value>
                <fullName>Education-University</fullName>
            </value>
            <value>
                <fullName>Government-Local</fullName>
            </value>
            <value>
                <fullName>Government-State</fullName>
            </value>
            <value>
                <fullName>Government-Federal</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Audio/Video-Education</fullName>
            </value>
            <value>
                <fullName>Audio/Video-Enterprise</fullName>
            </value>
            <value>
                <fullName>Audio/Video-Home Theater</fullName>
            </value>
            <value>
                <fullName>Audio/Video-House of Worship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>