force-app/main/default/objects/Contact/fields/IndustryAcc__c.field-meta.xml
<CustomField>
    <fullName>IndustryAcc__c</fullName>
    <formula>text(Account.Industry )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry</label>
    <type>Text</type>
</CustomField>