force-app/main/default/objects/Contact/fields/isEmailBounced__c.field-meta.xml
<CustomField>
    <fullName>isEmailBounced__c</fullName>
    <formula>EmailBouncedDate &lt; now()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isEmailBounced</label>
    <type>Checkbox</type>
</CustomField>