force-app/main/default/objects/Contact/fields/Lead_Source_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Name__c</fullName>
    <label>Lead Source Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Canada Top 100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>