force-app/main/default/objects/Contact/fields/Legal_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_First_Name__c</fullName>
    <description>Legal name for payouts to customer or partner</description>
    <inlineHelpText>Legal name for payouts to customer or partner</inlineHelpText>
    <label>Legal First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>