force-app/main/default/objects/Contact/fields/Level_in_Organization__c.field-meta.xml
<CustomField>
    <fullName>Level_in_Organization__c</fullName>
    <label>Level in Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Exec/Sr VP</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Owner/C-level</fullName>
            </value>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Associate</fullName>
                <isActive>false</isActive>
                <label>Associate</label>
            </value>
            <value>
                <fullName>Clerical</fullName>
                <isActive>false</isActive>
                <label>Clerical</label>
            </value>
            <value>
                <fullName>Leadership</fullName>
                <isActive>false</isActive>
                <label>Leadership</label>
            </value>
            <value>
                <fullName>Manager</fullName>
                <isActive>false</isActive>
                <label>Manager</label>
            </value>
            <value>
                <fullName>Middle</fullName>
                <isActive>false</isActive>
                <label>Middle</label>
            </value>
            <value>
                <fullName>Owner</fullName>
                <isActive>false</isActive>
                <label>Owner</label>
            </value>
            <value>
                <fullName>President</fullName>
                <isActive>false</isActive>
                <label>President</label>
            </value>
            <value>
                <fullName>Primary</fullName>
                <isActive>false</isActive>
                <label>Primary</label>
            </value>
            <value>
                <fullName>Sales</fullName>
                <isActive>false</isActive>
                <label>Sales</label>
            </value>
            <value>
                <fullName>Sales - Top Rep</fullName>
                <isActive>false</isActive>
                <label>Sales - Top Rep</label>
            </value>
            <value>
                <fullName>Sales / Marketing</fullName>
                <isActive>false</isActive>
                <label>Sales / Marketing</label>
            </value>
            <value>
                <fullName>Secondary</fullName>
                <isActive>false</isActive>
                <label>Secondary</label>
            </value>
            <value>
                <fullName>Technical</fullName>
                <isActive>false</isActive>
                <label>Technical</label>
            </value>
            <value>
                <fullName>VP</fullName>
                <isActive>false</isActive>
                <label>VP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>