force-app/main/default/objects/Contact/fields/LInkedIn__c.field-meta.xml
<CustomField>
    <fullName>LInkedIn__c</fullName>
    <label>LInkedIn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>