force-app/main/default/objects/Contact/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <description>This is the location of the contact and/or business</description>
    <label>Location Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>