force-app/main/default/objects/Contact/fields/Log_Call__c.field-meta.xml
<CustomField>
    <fullName>Log_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Log Call</label>
    <type>Checkbox</type>
</CustomField>