force-app/main/default/objects/Contact/fields/MAP__c.field-meta.xml
<CustomField>
    <fullName>MAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MAP</label>
    <type>Checkbox</type>
</CustomField>