force-app/main/default/objects/Contact/fields/Marketing_Post_Sales__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Post_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Post Sales</label>
    <type>Checkbox</type>
</CustomField>