force-app/main/default/objects/Contact/fields/massEditable__c.field-meta.xml
<CustomField>
    <fullName>massEditable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to tag a large amount of data to be exported, cleaned, and updated. on update, must make false or will come out in next export</description>
    <label>massEditable</label>
    <type>Checkbox</type>
</CustomField>