force-app/main/default/objects/Contact/fields/Master_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Master_Account_ID__c</fullName>
    <description>This is the Finch Club ID number for the business (Account).</description>
    <label>Master (Account) ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>