force-app/main/default/objects/Contact/fields/migrationExternalId__c.field-meta.xml
<CustomField>
    <fullName>migrationExternalId__c</fullName>
    <externalId>true</externalId>
    <label>migrationExternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>