force-app/main/default/objects/Contact/fields/myViewBoardDateAdded__c.field-meta.xml
<CustomField>
    <fullName>myViewBoardDateAdded__c</fullName>
    <label>myViewBoardDateAdded</label>
    <type>Date</type>
</CustomField>